--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Frontend Mentor | QR code component</title>
     <link rel="shortcut icon" href="assets/img/favicon-32x32.png" type="image/x-icon">
     <link href="./output.css" rel="stylesheet">
 </head>
